[package]
name = "exec-commands"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "3.1", features = ["derive"] }
console = "0.15"
gaol = "0.2"
glob = "0.3"
shell-escape = "0.1"
similar = { version = "2.2", features = ["inline"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tempfile = "3.3"
