[package]
name = "exec-commands"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
atty = "0.2"
clap = { version = "4.3", features = ["derive"] }
console = "0.15"
gaol = "0.2"
glob = "0.3"
shell-escape = "0.1"
similar = { version = "2.2", features = ["inline"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tempfile = "3.8"
